--- a/11_2_projeto_toughts/views/layouts/main.handlebars
+++ b/11_2_projeto_toughts/views/layouts/main.handlebars
@@ -6,10 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toughts</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
+    {{!-- Bootstrap Icons --}}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
-    {{{body}}}
+    <nav id="navbar">
+        <a href="/" id="logo">
+            <img src="/img/toughts_logo.png" alt="Toughts">
+        </a>
+        <ul>
+            {{!-- Urls pós autenticação --}}
+            <li><a href="/">Pensamentos</a></li>
+            <li><a href="/login">Entrar</a></li>
+            <li><a href="/register">Registrar</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        {{!-- Mensagens --}}
+        {{{body}}}
+    </div>
+    <footer>
+        <p><span>Toughts</span>&copy; 2022</p> {{!-- &copy; => simbolo copyright --}}
+    </footer>
 </body>
 
 </html>
