--- a/11_2_projeto_toughts/public/css/styles.css
+++ b/11_2_projeto_toughts/public/css/styles.css
@@ -46,6 +46,18 @@
     padding: 2em;
 }
 
+/* Messages */
+.message {
+    padding: 1em;
+    color: #004085;
+    background-color: #cce5ff;
+    border: 1px solid #b8daff;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 auto 2em;
+    max-width: 60%;
+}
+
 /* Login e Register */
 .auth-container {
     max-width: 450px;
@@ -104,6 +116,27 @@ form input[type='submit']:hover,
 .btn:hover {
     background-color: #f6982d;
     color: #fff;
+}
+
+/* Create/Edit Form */
+.tought-form-container a {
+    color: #f6982d;
+}
+
+.tought-form-container a:hover {
+    color: #fff;
+}
+
+.tought-form-container h1 {
+    margin: 1em 0;
+    color: #fff;
+    border-left: 4px solid #f6982d;
+    padding: 0.3em;
+}
+
+.tought-form-container form {
+    max-width: 30%;
+    margin-top: 1.5em;
 }
 
 /* Footer */
