--- a/11_2_projeto_toughts/views/layouts/main.handlebars
+++ b/11_2_projeto_toughts/views/layouts/main.handlebars
@@ -20,16 +20,26 @@
         <ul>
             {{!-- Urls pós autenticação --}}
             <li><a href="/">Pensamentos</a></li>
-            <li><a href="/login">Entrar</a></li>
-            <li><a href="/register">Registrar</a></li>
+            {{#if session.userid}}
+                <li><a href="/toughts/dashboard">Dashboard</a></li>
+                <li><a href="/logout">Sair</a></li>
+            {{else}}
+                <li><a href="/login">Entrar</a></li>
+                <li><a href="/register">Registrar</a></li>
+            {{/if}}
         </ul>
     </nav>
     <div class="container">
         {{!-- Mensagens --}}
+        {{#if messages.message}}
+            <div class="message">
+                {{messages.message}}
+            </div>
+        {{/if}}
         {{{body}}}
     </div>
     <footer>
-        <p><span>Toughts</span>&copy; 2022</p> {{!-- &copy; => simbolo copyright --}}
+        <p><span>Toughts</span> &copy; 2022</p> {{!-- &copy; => simbolo copyright --}}
     </footer>
 </body>
 
