--- a/11_2_projeto_toughts/public/css/styles.css
+++ b/11_2_projeto_toughts/public/css/styles.css
@@ -2,7 +2,7 @@
     font-family: Helvetica;
     margin: 0;
     padding: 0;
-    background-color: #222; 
+    background-color: #222;
     color: #fff;
 }
 
@@ -33,7 +33,7 @@
 #navbar ul li a {
     text-decoration: none;
     transition: .5s;
-    font-weight: bold;   
+    font-weight: bold;
 }
 
 #navbar ul li a:hover {
@@ -61,7 +61,7 @@
 /* Login e Register */
 .auth-container {
     max-width: 450px;
-    margin: 0  auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
@@ -71,7 +71,7 @@
     color: #fff;
     border-left: 4px solid #f6982d;
     padding: 0.3em;
-    width: 100px;    
+    width: 100px;
 }
 
 .auth-container a {
@@ -110,7 +110,7 @@ form input[type='submit'],
     text-decoration: none;
     transition: .5s;
 
-} 
+}
 
 form input[type='submit']:hover,
 .btn:hover {
@@ -137,6 +137,53 @@ form input[type='submit']:hover,
 .tought-form-container form {
     max-width: 30%;
     margin-top: 1.5em;
+}
+
+/* Dashboard */
+.title-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5em;
+}
+
+.title-container h2 {
+    border-left: 4px solid #f6982d;
+    padding: 10px;
+}
+
+.dashboard h3 {
+    margin-bottom: 1.5em;
+}
+
+.dashboard ul {
+    list-style: none;
+}
+
+.dashboard li {
+    padding: 12px;
+    border-bottom: 1px solid #f6982d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dashboard .label {
+    font-weight: bold;
+    color: #f6982d;
+}
+
+.dashboard .actions {
+    display: flex;
+}
+
+.dashboard .actions .btn {
+    color: #fff;
+    border-color: #fff;
+    margin: 0 .5em;
+}
+
+.dashboard a {
+    color: #f6982d;
 }
 
 /* Footer */
