--- a/11_2_projeto_toughts/views/toughts/create.handlebars
+++ b/11_2_projeto_toughts/views/toughts/create.handlebars
@@ -4,7 +4,7 @@
     <form action="/toughts/add" method="POST">
         <div class="form-control">
             <label for="title">Pensamento</label>
-            <input type="text" name="tile" placeholder="Digite o seu pensamento...">
+            <input type="text" name="title" placeholder="Digite o seu pensamento...">
         </div>
         <input type="submit" value="Criar Pensamento">
     </form>
